case sensitive fix for github pages

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         src="./assets/1.png" width="602" height="136" /></span></span></p>
                 <p><span
                     style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;"><span><img
-                        src="assets/2.png" width="595" height="329" /></span></span></p>
+                        src="./assets/2.png" width="595" height="329" /></span></span></p>
                 <p>L<span
                     style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;">og
                     in with your User ID, PIN #, and token/authenticator password.</span></p>
@@ -150,14 +150,14 @@
               <div class="image screensteps-image"></div>
               <div id="" class="step screensteps-section screensteps-depth-1"
                 data-step-uuid="6e02774d-52a3-4f6f-8e7f-b0ef7c869fa7">
-                <div class="image screensteps-image"><img src="/assets/two.png"
+                <div class="image screensteps-image"><img src="./assets/two.png"
                     alt="mceclip0.png" /></div>
                 <div class="image screensteps-image"><strong>Step 2:</strong> When logged in, click on
                   the&nbsp;<strong>Start New</strong> tab. You will need to repeat this step for each agreement.</div>
               </div>
               <div id="" class="step screensteps-section screensteps-depth-1"
                 data-step-uuid="63de9346-bd52-4ca6-ad72-dabe748a1e43">
-                <div class="image screensteps-image"><img src="/assets/3.png"
+                <div class="image screensteps-image"><img src="./assets/3.png"
                     alt="TRREB_Online_Agreements_-_Guideline__15_.png" width="702" height="395" /></div>
                 <div class="image screensteps-image"></div>
                 <div class="image screensteps-image"><strong>Step 3:</strong> Signing TREEB Online Agreements<span
@@ -169,7 +169,7 @@
                 <div class="image screensteps-image">After you have clicked Start New, you will select the Data License
                   Agreement and then click on the Continue button.&nbsp;</div>
                 <div class="image screensteps-image"></div>
-                <div class="image screensteps-image"><img src="/assets/4.png" width="323"
+                <div class="image screensteps-image"><img src="./assets/4.png" width="323"
                     height="212" /> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</div>
               </div>
               <div id="dla_license_agreement" class="step screensteps-section screensteps-depth-1"
@@ -179,7 +179,7 @@
                   <div class="step-instructions screensteps-textblock ">
                     <p>Next, you will have to check off the selected areas. They have been circled in
                       <strong>GREEN</strong>. Please verify your contact information and brokerage information.</p>
-                    <p><img src="/assets/5.jpeg" alt="imageedit_27_8538692701.jpg" width="703"
+                    <p><img src="./assets/5.jpeg" alt="imageedit_27_8538692701.jpg" width="703"
                         height="730" /></p>
                     <p>&nbsp;</p>
                     <p><strong>Next:</strong> For the Third-Party provider please select <strong>AgentLocator/AdoSoft
@@ -187,7 +187,7 @@
                     <p>For Third-Party Contact enter <strong>Support&nbsp;</strong>and for Third-Party Email enter
                       <strong><a href="mailto:support@agentlocator.ca">support@agentlocator.ca</a></strong></p>
                     <p>Finally, check off the selected box and click on <strong>Send to Third Party</strong>.</p>
-                    <p><img src="/assets/6.jpeg" alt="TREB-10-2__1_.jpg" width="702"
+                    <p><img src="./assets/6.jpeg" alt="TREB-10-2__1_.jpg" width="702"
                         height="286" /></p>
                   </div>
                 </div>
@@ -203,7 +203,7 @@
               </div>
               <div id="idx_data_feed_agreements" class="step screensteps-section screensteps-depth-1"
                 data-step-uuid="5d06db57-1fa5-400a-8799-b988e5009fe7">
-                <p><img src="/assets/7.png" alt="TRREB_Online_Agreements_-_Guideline__15_.png"
+                <p><img src="./assets/7.png" alt="TRREB_Online_Agreements_-_Guideline__15_.png"
                     width="702" height="395" /></p>
                 <p>Select the <strong>IDX Data Agreement</strong> and then click the <strong>Continue</strong>
                   button.&nbsp;</p>
@@ -215,7 +215,7 @@
                       <strong>GREEN</strong>.&nbsp;</p>
                     <p><span class="wysiwyg-underline">Please verify your contact information and brokerage information
                         is correct.</span></p>
-                    <p><img src="assets/9.jpeg" alt="treb-idxresized.jpg" width="702"
+                    <p><img src="./assets/9.jpeg" alt="treb-idxresized.jpg" width="702"
                         height="640" /></p>
                   </div>
                 </div>
@@ -230,7 +230,7 @@
                 </div>
                 <div id="" class="step screensteps-section screensteps-depth-2"
                   data-step-uuid="2e29d112-614e-4a00-b3ad-db6383e31dc8">
-                  <div class="image screensteps-image"><img src="assets/10.png"
+                  <div class="image screensteps-image"><img src="./assets/10.png"
                       alt="Copy_of_TRREB_Online_Agreements_-_Guideline.png" width="704" height="183" /></div>
                 </div>
                 <div id="" class="step screensteps-section screensteps-depth-2"
@@ -240,7 +240,7 @@
                       with AgentLocator.</p>
                     <p>Finally, check off the two areas which are in <strong>GREEN</strong>.&nbsp;</p>
                     <p><span class="wysiwyg-underline">NOTE: Do not enter any domain names that are NOT associated with
-                        your AgentLocator account.<img src="assets/11.jpeg"
+                        your AgentLocator account.<img src="./assets/11.jpeg"
                           alt="imageedit_31_5059853952.jpg" width="702" height="278" /></span></p>
                   </div>
                 </div>
@@ -248,7 +248,7 @@
                   data-step-uuid="f675e56a-82fa-4758-b5fa-5bc315cdf10f">
                   <div class="step-instructions screensteps-textblock ">
                     <p>Finally, check off the last box and then click to <strong>Send to Third Party</strong>.</p>
-                    <p><img src="assets/12.png"
+                    <p><img src="./assets/12.png"
                         alt="TRREB_Online_Agreements_-_Guideline__13_.png" width="702" height="395" /></p>
                     <h2 id="h_01HQ3SBVA84E1Y3RZFQD6YEEP9" class="wysiwyg-text-align-center"><strong>3/3 Agreement: VOW
                         Data Agreement</strong></h2>
@@ -258,21 +258,21 @@
               </div>
               <div id="vow_data_feed_agreements" class="step screensteps-section screensteps-depth-1"
                 data-step-uuid="bd6657d7-85fb-46de-8a8e-406ef32032c7">
-                <p><img src="assets/13.png" alt="TRREB_Online_Agreements_-_Guideline__15_.png"
+                <p><img src="./assets/13.png" alt="TRREB_Online_Agreements_-_Guideline__15_.png"
                     width="704" height="396" /></p>
                 <div class="step-instructions screensteps-textblock ">
                   <p>Next, select the <strong>VOW Data Agreement</strong> and then click on
                     <strong>Continue</strong>.<span
                       style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;"></span>
                   </p>
-                  <p><img src="assets/14.png" width="325" height="203" /></p>
+                  <p><img src="./assets/14.png" width="325" height="203" /></p>
                 </div>
                 <div id="" class="step screensteps-section screensteps-depth-2"
                   data-step-uuid="173be9fa-84d0-43e8-b827-b86dca306326">
                   <div class="step-instructions screensteps-textblock ">
                     <p>Next, check off the box marked in <strong>GREEN</strong> and verify your contact information
                       below.</p>
-                    <p><img src="assets/15.jpeg" alt="treb-12-2x.jpg" width="702" height="642" />
+                    <p><img src="./assets/15.jpeg" alt="treb-12-2x.jpg" width="702" height="642" />
                     </p>
                   </div>
                 </div>
@@ -282,7 +282,7 @@
                     <p><strong>Next:</strong> For the AVP please select <strong>AgentLocator/AdoSoft Inc. </strong></p>
                     <p>For Contact enter in <strong>Support&nbsp;</strong>and for email enter <strong><a
                           href="mailto:support@agentlocator.ca">support@agentlocator.ca</a></strong></p>
-                    <p><img src="assets/16.png"
+                    <p><img src="./assets/16.png"
                         alt="Copy_of_TRREB_Online_Agreements_-_Guideline.png" width="704" height="183" /></p>
                   </div>
                 </div>
@@ -295,7 +295,7 @@
                     <p>Press the <strong>Send to AVP button.</strong></p>
                     <p><span class="wysiwyg-underline">NOTE: Do not enter any domain names that are NOT associated with
                         your AgentLocator account.</span></p>
-                    <p><img src="assets/17.png" alt="treb-vow.png" width="703" height="541" />
+                    <p><img src="./assets/17.png" alt="treb-vow.png" width="703" height="541" />
                     </p>
                     <p><span
                         style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;">Lastly,
