--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     width="702" height="395" /></p>
                 <p>Select the <strong>IDX Data Agreement</strong> and then click the <strong>Continue</strong>
                   button.&nbsp;</p>
-                <p><img src="/assets/8.png" width="353" height="203" /></p>
+                <p><img src="./assets/8.png" width="353" height="203" /></p>
                 <div id="" class="step screensteps-section screensteps-depth-2"
                   data-step-uuid="c8cc655a-4800-44dd-a495-caf7d98b9b55">
                   <div class="step-instructions screensteps-textblock ">
@@ -306,7 +306,7 @@
                         button to logout.&nbsp;</span></p>
                     <p><span
                         style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;"><img
-                          src="assets/18.png"
+                          src="./assets/18.png"
                           alt="Copy_of_TRREB_Online_Agreements_-_Guideline__1_.png" /></span><a
                         style="background-color: #ffffff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;"
                         href="https://s3.amazonaws.com/screensteps_live/image_assets/assets/000/717/227/original/65bd3123-e074-4fb2-9919-7c4a226dd04b.png?1498491264">&nbsp;</a>
