responsive and respective changes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </section> -->
       <div class="container">
         <section class="article-wrapper">
-          <div class="row">
+          <div class="row smallfont">
             <div class="col-md-9 col-sm-9 col-xs-12">
               <div class="body-color">
                 <h1 class="article-head">TRREB Online Agreements</h1>
@@ -235,32 +235,32 @@
                         font-family: -apple-system, BlinkMacSystemFont,
                           'Segoe UI', Helvetica, Arial, sans-serif;
                       "
-                      ><span
-                        ><img
+                      ><span>
+                        <img
                           src="./assets/2.png"
                           width="595"
-                          height="329" /></span
+                          height="300"
+                        /> </span
                     ></span>
                   </p>
-                  <p>
-                    L<span
-                      style="
-                        font-family: -apple-system, BlinkMacSystemFont,
-                          'Segoe UI', Helvetica, Arial, sans-serif;
-                      "
-                      >og in with your User ID, PIN #, and token/authenticator
-                      password.</span
-                    >
+                  <p class="spacey relativeTop">
+                    Log in with your User ID, PIN #, and token/authenticator
+                    password.
                   </p>
                 </div>
-                <div class="image screensteps-image"></div>
                 <div
                   id=""
                   class="step screensteps-section screensteps-depth-1"
                   data-step-uuid="6e02774d-52a3-4f6f-8e7f-b0ef7c869fa7"
                 >
                   <div class="image screensteps-image">
-                    <img src="./assets/two.png" alt="mceclip0.png" />
+                    <img
+                      src="./assets/two.png"
+                      width="595"
+                      height="300"
+                      alt="mceclip0.png"
+                      class="spacey"
+                    />
                   </div>
                   <div class="image screensteps-image">
                     <strong>Step 2:</strong> When logged in, click on
@@ -281,22 +281,25 @@
                       height="395"
                     />
                   </div>
-                  <div class="image screensteps-image"></div>
-                  <div class="image screensteps-image marginT">
-                    <strong>Step 3:</strong> Signing TREEB Online
-                    Agreements<span class="wysiwyg-font-size-large"></span>
-                  </div>
-                  <div class="image screensteps-image"></div>
-                  <!-- <h2
+                  <div class="image screensteps-image spacey">
+                    <div class="image screensteps-image">
+                      <strong>Step 3:</strong> Signing TREEB Online
+                      Agreements<span class="wysiwyg-font-size-large"></span>
+                    </div>
+
+                    <!-- <h2
                     id="h_01HQ3SBVA7PBJCR3RYGCS6Y987"
                     class="image screensteps-image wysiwyg-text-align-center"
                   > -->
+                  </div>
                   <div class="wysiwyg-font-size-large stepNav">
                     <span class="smallfont">
-                      <span class="boldless">Agreement 1/3:</span>
-                      <span> Data License Agreement </span>
+                      <span class="boldless"
+                        >Agreement 1/3: Data License Agreement</span
+                      >
                     </span>
                   </div>
+
                   <!-- </h2> -->
                   <div class="image screensteps-image smallfont">
                     After you have clicked Start New, you will select the Data
@@ -305,8 +308,13 @@
                   </div>
                   <div class="image screensteps-image"></div>
                   <div class="image screensteps-image">
-                    <img src="./assets/4.png" width="323" height="212" /> &nbsp;
+                    <img
+                      src="./assets/4.png"
+                      width="323"
+                      height="212"
+/                    />
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    &nbsp;
                   </div>
                 </div>
                 <div
@@ -319,7 +327,7 @@
                     class="step screensteps-section screensteps-depth-2"
                     data-step-uuid="4d618149-5a9a-4bdc-9a98-361fe7fbc83f"
                   >
-                    <div class="step-instructions screensteps-textblock">
+                    <div class="step-instructions screensteps-textblock marginT">
                       <p class="smallfont">
                         Next, you will have to check off the selected areas.
                         They have been circled in <strong>GREEN</strong>. Please
@@ -370,11 +378,11 @@
                     data-step-uuid="a30fab24-552f-4b40-8194-9a2ebdea5d34"
                   >
                     <div
-                      class="step-instructions screensteps-textblock smallfont"
+                      class="step-instructions screensteps-textblock smallfont "
                     >
                       <h2
                         id="h_01HQ3SBVA7BA2QXD7SFMAZVPSQ"
-                        class="wysiwyg-text-align-center stepNav smallfont"
+                        class="wysiwyg-text-align-center  marginT"
                       >
                         <strong>Agreement 2/3:</strong> IDX Data Agreement
                       </h2>
@@ -395,13 +403,14 @@
                       alt="TRREB_Online_Agreements_-_Guideline__15_.png"
                       width="702"
                       height="395"
+                      class="bottom10"
                     />
                   </p>
-                  <p class="smallfont">
+                  <p class="smallfont marginT">
                     Select the <strong>IDX Data Agreement</strong> and then
                     click the <strong>Continue</strong> button.&nbsp;
                   </p>
-                  <p><img src="./assets/8.png" width="353" height="203" /></p>
+                  <p><img src="./assets/8.png" width="353" height="203" class="bottom10" /></p>
                   <div
                     id=""
                     class="step screensteps-section screensteps-depth-2"
@@ -424,6 +433,7 @@
                           alt="treb-idxresized.jpg"
                           width="702"
                           height="640"
+                          class="bottom10"
                         />
                       </p>
                     </div>
@@ -462,6 +472,7 @@
                         alt="Copy_of_TRREB_Online_Agreements_-_Guideline.png"
                         width="704"
                         height="183"
+                        class="bottom10"
                       />
                     </div>
                   </div>
@@ -490,6 +501,7 @@
                             alt="imageedit_31_5059853952.jpg"
                             width="702"
                             height="278"
+                            class="bottom10"
                         /></span>
                       </p>
                     </div>
@@ -512,6 +524,7 @@
                           alt="TRREB_Online_Agreements_-_Guideline__13_.png"
                           width="702"
                           height="395"
+                          class="bottom10"
                         />
                       </p>
                       <h2
@@ -536,6 +549,7 @@
                       alt="TRREB_Online_Agreements_-_Guideline__15_.png"
                       width="704"
                       height="396"
+                      class="bottom10"
                     />
                   </p>
                   <div
@@ -551,7 +565,7 @@
                       ></span>
                     </p>
                     <p>
-                      <img src="./assets/14.png" width="325" height="203" />
+                      <img src="./assets/14.png" width="325" height="203" class="bottom10" />
                     </p>
                   </div>
                   <div
@@ -573,6 +587,7 @@
                           alt="treb-12-2x.jpg"
                           width="702"
                           height="642"
+                          class="bottom10"
                         />
                       </p>
                     </div>
@@ -604,6 +619,7 @@
                           alt="Copy_of_TRREB_Online_Agreements_-_Guideline.png"
                           width="704"
                           height="183"
+                          class="bottom10"
                         />
                       </p>
                     </div>
@@ -635,6 +651,7 @@
                           alt="treb-vow.png"
                           width="703"
                           height="541"
+                          class="bottom10"
                         />
                       </p>
                       <p>
