--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- v24596 -->
 
-    <title>SixDesign | Trreb Data Agreement &ndash; AgentLocator</title>
+    <title>SixDesign | Trreb Data Agreement</title>
 
     <meta name="csrf-param" content="authenticity_token" />
     <meta name="csrf-token" content="" />
@@ -13,6 +13,7 @@
       name="description"
       content="Please follow these instructions on how to complete all three agreements below:  1. Data License Agreement 2. IDX Data Agreement 3. VOW..."
     />
+    <link rel="icon" type="image/x-icon" href="/assets/sixdesign-logo.svg" />
     <meta
       property="og:image"
       content="https://theme.zdassets.com/theme_assets/224872/8f8a9a8d875c47c53ed763911626cd339f9806e1.png"
@@ -23,7 +24,6 @@
     <meta
       property="og:description"
       content="Please follow these instructions on how to complete all three agreements below:
-
 1. Data License Agreement
 2. IDX Data Agreement
 3. VOW Data Agreement *Before you get started, make sure you have pu..."
@@ -308,11 +308,7 @@
                   </div>
                   <div class="image screensteps-image"></div>
                   <div class="image screensteps-image">
-                    <img
-                      src="./assets/4.png"
-                      width="323"
-                      height="212"
-/                    />
+                    <img src="./assets/4.png" width="323" height="212" / />
                     &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                     &nbsp;
                   </div>
@@ -327,7 +323,9 @@
                     class="step screensteps-section screensteps-depth-2"
                     data-step-uuid="4d618149-5a9a-4bdc-9a98-361fe7fbc83f"
                   >
-                    <div class="step-instructions screensteps-textblock marginT">
+                    <div
+                      class="step-instructions screensteps-textblock marginT"
+                    >
                       <p class="smallfont">
                         Next, you will have to check off the selected areas.
                         They have been circled in <strong>GREEN</strong>. Please
@@ -378,11 +376,11 @@
                     data-step-uuid="a30fab24-552f-4b40-8194-9a2ebdea5d34"
                   >
                     <div
-                      class="step-instructions screensteps-textblock smallfont "
+                      class="step-instructions screensteps-textblock smallfont"
                     >
                       <h2
                         id="h_01HQ3SBVA7BA2QXD7SFMAZVPSQ"
-                        class="wysiwyg-text-align-center  marginT"
+                        class="wysiwyg-text-align-center marginT"
                       >
                         <strong>Agreement 2/3:</strong> IDX Data Agreement
                       </h2>
@@ -410,7 +408,14 @@
                     Select the <strong>IDX Data Agreement</strong> and then
                     click the <strong>Continue</strong> button.&nbsp;
                   </p>
-                  <p><img src="./assets/8.png" width="353" height="203" class="bottom10" /></p>
+                  <p>
+                    <img
+                      src="./assets/8.png"
+                      width="353"
+                      height="203"
+                      class="bottom10"
+                    />
+                  </p>
                   <div
                     id=""
                     class="step screensteps-section screensteps-depth-2"
@@ -565,7 +570,12 @@
                       ></span>
                     </p>
                     <p>
-                      <img src="./assets/14.png" width="325" height="203" class="bottom10" />
+                      <img
+                        src="./assets/14.png"
+                        width="325"
+                        height="203"
+                        class="bottom10"
+                      />
                     </p>
                   </div>
                   <div
