homebaba email and name added✅

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                       <p class="smallfont">
                         <strong>Next:</strong> For the Third-Party provider
                         please select
-                        <strong>AgentLocator/AdoSoft Inc. </strong>
+                        <strong>Homebaba</strong>
                       </p>
                       <p class="smallfont">
                         For Third-Party Contact enter
@@ -352,7 +352,7 @@
                         enter
                         <strong
                           ><a href="mailto:support@agentlocator.ca"
-                            >support@agentlocator.ca</a
+                            >info@homebaba.ca</a
                           ></strong
                         >
                       </p>
@@ -452,7 +452,7 @@
                       <p class="smallfont">
                         <strong>Next:</strong> For the Third-Party provider
                         please select
-                        <strong>AgentLocator/AdoSoft Inc. </strong>
+                        <strong>Homebaba</strong>
                       </p>
                       <p class="smallfont">
                         For Third-Party Contact enter
@@ -460,7 +460,7 @@
                         enter
                         <strong
                           ><a href="mailto:support@agentlocator.ca"
-                            >support@agentlocator.ca</a
+                            >info@homebaba.ca</a
                           ></strong
                         >
                       </p>
@@ -612,14 +612,14 @@
                     >
                       <p>
                         <strong>Next:</strong> For the AVP please select
-                        <strong>AgentLocator/AdoSoft Inc. </strong>
+                        <strong>Homebaba</strong>
                       </p>
                       <p>
                         For Contact enter in <strong>Support&nbsp;</strong>and
                         for email enter
                         <strong
                           ><a href="mailto:support@agentlocator.ca"
-                            >support@agentlocator.ca</a
+                            >info@homebaba.ca</a
                           ></strong
                         >
                       </p>
